# dangr

./: .gitignore  Introduction.md  README.md
dangr_c/: .pylintrc  README.md  dangr_template.j2  pyproject.toml
dangr_c/dangr_c/: code_generator.py  dangr_code.py  expr_parser.py  jasm_rule.py  main.py  parser.py  visitor.py
dangr_c/test_files/: alloc_zero.py  alloc_zero.yaml  hardware_breakpoint.py  hardware_breakpoint.yaml  software_breakpoint.py  software_breakpoint.yaml  uncontrolled_usr_input.py  uncontrolled_usr_input.yaml
dangr_c/tests/: test_expr_generation.py  test_generator.py
dangr_rt/: .pylintrc  pyproject.toml
dangr_rt/dangr_rt/: __init__.py  arguments_analyzer.py  dangr_analysis.py  dangr_argparse.py  dangr_simulation.py  dangr_types.py  dependency_analyzer.py  expression.py  jasm_findings.py  simulator.py  variable_factory.py  variables.py
dangr_rt/test_files/arguments_analyzer/: optimized.s
dangr_rt/test_files/dangr_analysis/: hw_breakpoint  small_bmp_support_lib  sw_breakpoint_branches.s  sw_breakpoint_trivial.s  sw_breakpoint_xz_analysis.s  uncontrolled_input.s
dangr_rt/test_files/dependency_analyzer/: deref.s  literal.s  register.s
dangr_rt/tests/: conftest.py  test_argument_analyzer.py  test_dangr_alloc_zero.py  test_dangr_hw_breakpoint.py  test_dangr_sw_breakpoint.py  test_dangr_uncontrolled_input.py  test_dependency_analyzer.py  test_simulator.py  test_vars_expr.py
dangrlib/: pyproject.toml
dangrlib/dangrlib/: arguments_analyzer.py  constraint.py  dangr_analysis.py  dangr_types.py  dependency_analyzer.py  expression.py  jasm_findings.py  simulation_manager.py  simulator.py  variable_factory.py  variables.py
dangrlib/test_files/arguments_analyzer/: not_optimized.s
dangrlib/test_files/dependency_analyzer/: memory.s  mini.s
dangrlib/test_files/exprs/: vars.s
dangrlib/test_files/simulator/: forward.s  hook.s  step.s
dangrlib/tests/: compilation_utils.py  conftest.py  test_argument_analyzer.py  test_dangr_alloc_zero.py  test_dangr_hw_breakpoint.py  test_dangr_sw_breakpoint.py  test_dangr_uncontrolled_input.py  test_dependency_analyzer.py  test_simulator.py  test_vars_expr.py
examples/: hardware_breakpoint.py  hardware_breakpoint.yaml  logofail_vuln.yaml  software_breakpoint.py  software_breakpoint.yaml  uncontrolled_usr_input.py  uncontrolled_usr_input.yaml
(+1 files in other folders)
