[tool.poetry]
name = "dangr_c"
version = "0.1.0"
description = ""
authors = ["Lucía Martinez Gavier <lucia.m.gavier@mi.unc.edu.ar>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Jinja2 = "^3.1.4"
pyparsing = "^3.2.0"
pytest = "^8.3.3"
cerberus = "^1.3.5"
pyyaml = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
