[tool.poetry]
name = "dangr_c"
version = "1.0"
description = "The Dangr compiler translates declarative rules into Python programs. These programs, when executed, perform symbolic execution to detect specified patterns or vulnerabilities in binaries"
authors = ["Lucía Martinez Gavier <lucia.m.gavier@mi.unc.edu.ar>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Jinja2 = "^3.1.5"
pyparsing = "^3.2.0"
pytest = "^8.3.3"
cerberus = "^1.3.5"
pyyaml = "^6.0.2"
yapf = "^0.40.2"
types-pyyaml = "^6.0.12.20240917"
dangr-rt = "^1.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.29.0"
mypy = "^1.13.0"
radon = "^6.0.1"
bandit = "^1.7.10"
ruff = "^0.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
